Fixed invisible AJAX spinner

--- a/www/css/src/layout.sass
+++ b/www/css/src/layout.sass
@@ -57,6 +57,7 @@ footer.page-footer
 // AJAX spinner
 #ajax-spinner
   position: fixed
+  z-index: 1000
   width: 32px
   height: 32px
   top: 16px
